--- a/index.html
+++ b/index.html
@@ -44,23 +44,30 @@
 							<article id="intro">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/compositephoto.png" alt="" /></span>
-								<p> This is my about page </p>
-								</article> 
+								<p> I am a creative advertising and music business student who enjoys bringing ideas to life through a mix of communication skills and imagination. I focus on understanding people, how they think, and what captures their attention. This helps me create work that feels genuine, engaging, and memorable. Whether I am developing campaign concepts, planning content, or working on music marketing projects, I aim to connect creativity with clear purpose. </p>
+								<p>I enjoy collaborating with others and using my social skills to build strong working relationships. At the same time, I like experimenting with visuals new approaches that make mestand out. I am always looking for ways to blend my interests in advertising and music and to explore how culture and creativity influence each other. Above all, I enjoy turning ideas into something real that people can relate to and care about. </p>
+							</article> 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
+								<p>As a music business student as well as passionate musician in the music business program at UGA, I have helped work on multiple projects in various ways through marketing or writing: </p>
 								<span class="image main"><img src="images\superstarallmine.png" alt="" /></span>
 								<p> <a href="https://open.spotify.com/track/2m6ztBzOqDr2UCIfazjtUT?si=9045dcbe80144c69" target="_blank"> superstar - all mine </a>(Release) </p>
 								<span class="image main"><img src="images\cuddlingpic.png" alt="" /></span>
 								<p> <a href="https://open.spotify.com/album/4xJcGNuhjHMCNAzXv5znsr?si=IRLTAoYLRI-nM4n__yfMjg" target="_blank"> Cuddling - The Avoidant </a>(Writing/Release) </p>
-								
+								<P>-------------------  </P>
+								<p>Here is a postcard I designed as practice for a Hawaii Touring company:</p>
+								<span class="image main"><img src="images\postcardfront.png" alt="" /></span>
+								<span class="image main"><img src="images\postcardback.png" alt="" /></span>
+
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">Resume</h2>
 				
-								<p> You can find a link to my resume <a href="images\Carson Brandonisio Resume 2025.pdf"> here. </a></p>
+								<p> You can find a link to my resume by clicking <a href="images\Carson Brandonisio Resume 2025.pdf"> here. </a></p>
+								<span class="image main"> <img src="images\resumeimg.png" alt=""> </span>
 							</article>
 
 						<!-- Contact -->
